--- a/TestLauncher/TestLauncher.csproj
+++ b/TestLauncher/TestLauncher.csproj
@@ -27,15 +27,17 @@
         <DebugType>pdbonly</DebugType>
         <Optimize>true</Optimize>
         <OutputPath>bin\Release\</OutputPath>
-        <DefineConstants>TRACE;ALLOW_VISUALS</DefineConstants>
+        <DefineConstants>TRACE</DefineConstants>
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Production|AnyCPU' ">
-      <DefineConstants>TRACE</DefineConstants>
+    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release_DevTools|AnyCPU' ">
+      <DebugType>pdbonly</DebugType>
       <Optimize>true</Optimize>
-      <Prefer32bit>false</Prefer32bit>
-      <OutputPath>bin\Production\</OutputPath>
+      <DefineConstants>TRACE;KN_DEV_TOOLS</DefineConstants>
+      <ErrorReport>prompt</ErrorReport>
+      <WarningLevel>4</WarningLevel>
+      <OutputPath>bin\Release_DevTools\</OutputPath>
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="System" />
