--- a/KN_Lights/KN_Lights.csproj
+++ b/KN_Lights/KN_Lights.csproj
@@ -120,6 +120,7 @@
         <Compile Include="Loader.cs" />
         <Compile Include="Lights.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="WorldLights.cs" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\KN_Core\KN_Core.csproj">
