--- a/KN_Lights/KN_Lights.csproj
+++ b/KN_Lights/KN_Lights.csproj
@@ -129,6 +129,7 @@
         <Compile Include="Loader.cs" />
         <Compile Include="Lights.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="StaticLightData.cs" />
         <Compile Include="StaticLights.cs" />
         <Compile Include="WorldLightsData.cs" />
         <Compile Include="WorldLights.cs" />
