--- a/KN_Core/KN_Core.csproj
+++ b/KN_Core/KN_Core.csproj
@@ -11,6 +11,7 @@
         <AssemblyName>KN_Core</AssemblyName>
         <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
+        <LangVersion>7.3</LangVersion>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -179,6 +180,7 @@
         <EmbeddedResource Include="Resources\Main.png" />
         <EmbeddedResource Include="Resources\MainDark.png" />
         <EmbeddedResource Include="Resources\OutlineDark.png" />
+        <EmbeddedResource Include="Resources\TachoOutline.png" />
     </ItemGroup>
     <ItemGroup>
         <EmbeddedResource Include="Resources\PlayPauseNormal.png" />
