--- a/KN_Core/KN_Core.csproj
+++ b/KN_Core/KN_Core.csproj
@@ -86,6 +86,9 @@
         <Reference Include="MonoMod.Utils, Version=19.11.5.1, Culture=neutral, PublicKeyToken=null">
           <HintPath>..\Dependencies\BepInEx\MonoMod.Utils.dll</HintPath>
         </Reference>
+        <Reference Include="SmartFox2X, Version=1.7.8.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\Dependencies\CarX\SmartFox2X.dll</HintPath>
+        </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
@@ -125,6 +128,7 @@
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="src\BaseMod.cs" />
         <Compile Include="src\CarPicker.cs" />
+        <Compile Include="src\CarXUDP.cs" />
         <Compile Include="src\ColorPicker.cs" />
         <Compile Include="src\Config.cs" />
         <Compile Include="src\Controls.cs" />
