--- a/KN_Core/KN_Core.csproj
+++ b/KN_Core/KN_Core.csproj
@@ -128,7 +128,7 @@
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="src\BaseMod.cs" />
         <Compile Include="src\CarPicker.cs" />
-        <Compile Include="src\CarXUDP.cs" />
+        <Compile Include="src\Udp.cs" />
         <Compile Include="src\ColorPicker.cs" />
         <Compile Include="src\Config.cs" />
         <Compile Include="src\Controls.cs" />
@@ -144,6 +144,7 @@
         <Compile Include="src\Skin.cs" />
         <Compile Include="src\Submodule\About.cs" />
         <Compile Include="src\Submodule\Settings.cs" />
+        <Compile Include="src\Suspension.cs" />
         <Compile Include="src\Tachometer.cs" />
         <Compile Include="src\TFCar.cs" />
         <Compile Include="src\Timeline.cs" />
