--- a/KN_Maps/KN_Maps.csproj
+++ b/KN_Maps/KN_Maps.csproj
@@ -4,14 +4,13 @@
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{FE444C33-7CF3-4861-B790-A90DF9C11459}</ProjectGuid>
-        <OutputType>Exe</OutputType>
+        <ProjectGuid>{757755FA-7CC9-481F-B4A1-23FC7C1BD216}</ProjectGuid>
+        <OutputType>Library</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>TestLauncher</RootNamespace>
-        <AssemblyName>TestLauncher</AssemblyName>
+        <RootNamespace>KN_Maps</RootNamespace>
+        <AssemblyName>KN_Maps</AssemblyName>
         <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
-        <LangVersion>7.3</LangVersion>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,46 +32,35 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release_DevTools|AnyCPU' ">
-      <DebugType>pdbonly</DebugType>
-      <Optimize>true</Optimize>
-      <DefineConstants>TRACE;KN_DEV_TOOLS</DefineConstants>
-      <ErrorReport>prompt</ErrorReport>
-      <WarningLevel>4</WarningLevel>
       <OutputPath>bin\Release_DevTools\</OutputPath>
+      <DefineConstants>TRACE;KN_DEV_TOOLS</DefineConstants>
+      <Optimize>true</Optimize>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="BepInEx, Version=5.0.1.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\Dependencies\BepInEx\BepInEx.dll</HintPath>
+        </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
         <Reference Include="System.Xml" />
+        <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\Dependencies\Unity\UnityEngine.dll</HintPath>
+        </Reference>
         <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>..\Dependencies\Unity\UnityEngine.CoreModule.dll</HintPath>
         </Reference>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Program.cs" />
+        <Compile Include="FlyMod.cs" />
+        <Compile Include="Loader.cs" />
+        <Compile Include="Maps.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
-      <ProjectReference Include="..\KN_Cinematic\KN_Cinematic.csproj">
-        <Project>{3434b33f-52d6-427f-90c8-4928b57d683f}</Project>
-        <Name>KN_Cinematic</Name>
-      </ProjectReference>
       <ProjectReference Include="..\KN_Core\KN_Core.csproj">
         <Project>{3e3223ac-c054-4a3d-9233-da24acad7c16}</Project>
         <Name>KN_Core</Name>
-      </ProjectReference>
-      <ProjectReference Include="..\KN_Lights\KN_Lights.csproj">
-        <Project>{a684b9d2-6b5f-4c40-a127-234c8eb22850}</Project>
-        <Name>KN_Lights</Name>
-      </ProjectReference>
-      <ProjectReference Include="..\KN_Maps\KN_Maps.csproj">
-        <Project>{757755fa-7cc9-481f-b4a1-23fc7c1bd216}</Project>
-        <Name>KN_Maps</Name>
-      </ProjectReference>
-      <ProjectReference Include="..\KN_Visuals\KN_Visuals.csproj">
-        <Project>{5a2e3d60-d1d4-4cce-ab00-ce9c33a83551}</Project>
-        <Name>KN_Visuals</Name>
       </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
