--- a/KN_Core/KN_Core.csproj
+++ b/KN_Core/KN_Core.csproj
@@ -131,6 +131,7 @@
         <Compile Include="src\Components\Exhaust\Exhaust.cs" />
         <Compile Include="src\Components\Exhaust\ExhaustData.cs" />
         <Compile Include="src\Components\Exhaust\ExhaustSerializer.cs" />
+        <Compile Include="src\Components\Suspension.cs" />
         <Compile Include="src\Components\Tachometer.cs" />
         <Compile Include="src\Pickers\CarPicker.cs" />
         <Compile Include="src\Pickers\ColorPicker.cs" />
@@ -147,7 +148,6 @@
         <Compile Include="src\Skin.cs" />
         <Compile Include="src\Submodule\About.cs" />
         <Compile Include="src\Submodule\Settings.cs" />
-        <Compile Include="src\Suspension.cs" />
         <Compile Include="src\TFCar.cs" />
         <Compile Include="src\Timeline.cs" />
     </ItemGroup>
