--- a/KN_Cinematic/KN_Cinematic.csproj
+++ b/KN_Cinematic/KN_Cinematic.csproj
@@ -89,6 +89,7 @@
         <Compile Include="CTKeyframe.cs" />
         <Compile Include="Loader.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Timeline.cs" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\KN_Core\KN_Core.csproj">
