web data loader

--- a/KN_Core/KN_Core.csproj
+++ b/KN_Core/KN_Core.csproj
@@ -154,6 +154,7 @@
         <Compile Include="src\KnCar.cs" />
         <Compile Include="src\KnUtils.cs" />
         <Compile Include="src\Updater.cs" />
+        <Compile Include="src\WebDataLoader.cs" />
     </ItemGroup>
     <ItemGroup>
         <EmbeddedResource Include="Resources\CameraActive.png" />
