--- a/KN_Updater/KN_Updater.csproj
+++ b/KN_Updater/KN_Updater.csproj
@@ -5,7 +5,7 @@
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
         <ProjectGuid>{066B59BA-5801-4709-8D0F-C6A65AFBB967}</ProjectGuid>
-        <OutputType>Exe</OutputType>
+        <OutputType>WinExe</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
         <RootNamespace>KN_Updater</RootNamespace>
         <AssemblyName>KN_Updater</AssemblyName>
@@ -31,18 +31,29 @@
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
+    <PropertyGroup>
+        <ApplicationIcon>Data\Icon.ico</ApplicationIcon>
+    </PropertyGroup>
     <ItemGroup>
+        <Reference Include="Octokit, Version=0.48.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>Data\Octokit.dll</HintPath>
+        </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
+        <Reference Include="System.IO.Compression" />
+        <Reference Include="System.IO.Compression.FileSystem" />
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Embedded.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Remote.cs" />
+        <Compile Include="Updater.cs" />
     </ItemGroup>
     <ItemGroup>
-      <Content Include="Data\Octokit.dll" />
+      <EmbeddedResource Include="Data\Octokit.dll" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
