updater code refactor

--- a/KN_Updater/KN_Updater.csproj
+++ b/KN_Updater/KN_Updater.csproj
@@ -47,6 +47,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Embedded.cs" />
+        <Compile Include="Log.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Remote.cs" />
