--- a/TestLauncher/TestLauncher.csproj
+++ b/TestLauncher/TestLauncher.csproj
@@ -54,10 +54,6 @@
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
-      <ProjectReference Include="..\KN_Cinematic\KN_Cinematic.csproj">
-        <Project>{3434b33f-52d6-427f-90c8-4928b57d683f}</Project>
-        <Name>KN_Cinematic</Name>
-      </ProjectReference>
       <ProjectReference Include="..\KN_Core\KN_Core.csproj">
         <Project>{3e3223ac-c054-4a3d-9233-da24acad7c16}</Project>
         <Name>KN_Core</Name>
@@ -65,6 +61,10 @@
       <ProjectReference Include="..\KN_Lights\KN_Lights.csproj">
         <Project>{a684b9d2-6b5f-4c40-a127-234c8eb22850}</Project>
         <Name>KN_Lights</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\KN_Loader\KN_Loader.csproj">
+        <Project>{ecb0dab8-34f5-4eb6-bcdc-67c7212a89ec}</Project>
+        <Name>KN_Loader</Name>
       </ProjectReference>
       <ProjectReference Include="..\KN_Maps\KN_Maps.csproj">
         <Project>{757755fa-7cc9-481f-b4a1-23fc7c1bd216}</Project>
